--- a/FrontEnd/bundle.css
+++ b/FrontEnd/bundle.css
@@ -1,6 +1,3 @@
-.container {
-  width: 80%; }
-
 .formSection {
   margin: 15px 0px;
   padding: 0px 50px; }
@@ -8,20 +5,20 @@
 .selectDropDown {
   width: 100%;
   padding: 5px 10px;
-  border: 1px solid grey;
+  border: 1px solid #ced4da;
   border-radius: 2px;
   background: #fff; }
 
 .textAreaSection {
   height: 80px;
   width: 100%;
-  border: 1px solid grey;
+  border: 1px solid #ced4da;
   border-radius: 2px;
   max-width: 100%;
   max-height: 150%; }
 
 .titleText {
-  border: 1px solid grey;
+  border: 1px solid #ced4da;
   border-radius: 2px;
   width: 100%;
   padding: 1%; }
@@ -48,15 +45,19 @@ body {
   background-color: #000; }
 
 .ideate-with-us {
-  background: #3b5998;
+  background: #ffc107;
   color: white; }
 
 .button-submit {
-  background: #3b5998;
-  border: 1px solid #3b5998;
+  background: #ffa901;
+  border: 1px solid #ffa901;
   padding: 8px 13px;
   color: white;
-  border-radius: 10px; }
+  border-radius: 4px; }
+
+.never-mind {
+  background-color: #6c757d;
+  border: 1px solid #6c757d; }
 
 .ideate-with-us-heading {
   text-align: center;
@@ -69,7 +70,8 @@ body {
 .ideate-with-us-button-footer {
   padding-top: 3.5%;
   border-top: 1px solid lightgrey;
-  margin: 0; }
+  margin: 0;
+  padding-bottom: 3.5%; }
 
 .marginRight {
   margin-right: 1%; }
@@ -82,3 +84,132 @@ body {
 
 .error {
   border: 1px solid red !important; }
+
+input[type="text"], textarea, select {
+  outline: none; }
+
+/*** new css ***/
+.fix-btm {
+  position: fixed;
+  bottom: 125px;
+  right: -62px;
+  -ms-transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
+  transform: rotate(270deg);
+  font-size: 1.70rem;
+  font-weight: 600; }
+
+img {
+  max-width: 100%;
+  height: 100%; }
+
+.ideate-with-us-modal-header {
+  padding: 0.4rem 1.25rem;
+  background: #ffa901;
+  border: 0;
+  color: #fff;
+  width: 100%;
+  display: inline-flex; }
+
+.ideate-with-us-btn {
+  border: 0;
+  color: black;
+  border-radius: 4px;
+  padding: 1%; }
+
+.btn-warning {
+  background-color: #ffc107 !important; }
+
+.btn-primary {
+  background: #aa166a; }
+
+.modal-body {
+  padding: 0; }
+
+.modal-content {
+  border: 0; }
+
+.mdl-csec {
+  padding: 1.4rem; }
+
+.ideate-with-us-modal-title {
+  font-size: 2.65rem;
+  font-weight: 600;
+  width: 96%; }
+
+.form-control {
+  padding: .375rem .5rem;
+  border-color: #ddd; }
+
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #999;
+  outline: 0;
+  box-shadow: none; }
+
+.ideate-with-us-close {
+  position: relative;
+  color: #fff;
+  opacity: 1;
+  background: none;
+  border: none; }
+
+.ideate-with-us-close:hover {
+  color: #fff; }
+
+.btn.focus, .btn:focus {
+  border: 0;
+  box-shadow: none; }
+
+.btn-primary:hover {
+  background: #8e0352; }
+
+.ideate-with-us-del-icn {
+  position: relative;
+  display: inline-block;
+  width: 40px; }
+
+.ideate-with-us-del-icn:after {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  display: block;
+  content: '';
+  left: 0;
+  top: -23px;
+  background: url(icn.png); }
+
+.del-icn-blk:after {
+  background: url(icn-blk.png); }
+
+@media (max-width: 575px) {
+  .form-group {
+    margin-bottom: 0.5rem; } }
+
+.thankYouHeader {
+  text-align: center;
+  color: red; }
+
+.thankYouDescription {
+  text-align: center;
+  margin: 15px auto;
+  width: 90%;
+  font-size: 1.7rem; }
+
+.thankYouButtons {
+  text-align: center; }
+
+.receiveUpdateButton {
+  background: deepskyblue;
+  border: 1px solid deepskyblue;
+  color: white;
+  padding: 6px;
+  border-radius: 3px; }
+
+.noThanksButton {
+  background: yellow;
+  border: 1px solid black;
+  color: black;
+  padding: 6px;
+  border-radius: 3px; }
